--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "JavascriptButton",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "",
   "license": "",
   "author": "",
   "private": true,
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "del": "^2.2.2",
     "gulp": "^3.9.1",
